--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sync:close:opportunities": "ts-node src/sync-close.ts opportunities",
     "sync:close:contacts": "ts-node src/sync-close.ts contacts",
     "sync:close:activities": "ts-node src/sync-close.ts activities",
+    "sync:close:users": "ts-node src/sync-close.ts users",
     "sync:close:all": "ts-node src/sync-close.ts all",
     "sync:close": "pnpm run sync:close:all",
     "query": "ts-node src/query-runner.ts",
