--- a/web-app/package.json
+++ b/web-app/package.json
@@ -14,5 +14,8 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "react-resizable-panels": "^3.0.2"
   }
 }
