loooots of progress

--- a/web-app/frontend/package.json
+++ b/web-app/frontend/package.json
@@ -13,7 +13,8 @@
     "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
-    "@mui/x-data-grid-premium": "^7.1.0",
+    "@mui/x-data-grid-premium": "^8.4.0",
+    "@mui/x-license": "^8.4.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
