--- a/web-app/frontend/package.json
+++ b/web-app/frontend/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.20.1",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
