--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,5 @@
 # pnpm workspace configuration
 packages:
   - "."
-  - "web-app"
-  - "web-app/frontend"
-  - "web-app/backend"
+  - "app"
+  - "api"
