--- a/api/package.json
+++ b/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "query-backend",
+  "name": "api",
   "version": "1.0.0",
   "description": "Hono API backend for query execution",
   "main": "dist/index.js",
