--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "query-frontend",
+  "name": "app",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.20.1",
     "react-syntax-highlighter": "^15.6.1",
     "zustand": "^5.0.5"
