--- a/package.json
+++ b/package.json
@@ -1,63 +1,73 @@
 {
-  "name": "multi-tenant-analytics",
+  "name": "data-analytics-platform",
   "version": "1.0.0",
-  "description": "Multi-tenant analytics platform syncing data from Close.com, Stripe, and other sources",
-  "main": "dist/index.js",
+  "description": "Analytics platform syncing data from multiple sources like Close.com, Stripe, and databases",
+  "main": "index.js",
   "scripts": {
+    "dev": "concurrently \"pnpm run docker:up\" \"pnpm --filter app run dev\" \"pnpm --filter api run dev\"",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev:core": "ts-node src/index.ts",
-    "dev": "pnpm run mongo:up && concurrently -k \"pnpm --filter api dev\" \"pnpm --filter app dev\"",
-    "sync:close:leads": "ts-node src/sync-close.ts leads",
-    "sync:close:opportunities": "ts-node src/sync-close.ts opportunities",
-    "sync:close:contacts": "ts-node src/sync-close.ts contacts",
-    "sync:close:activities": "ts-node src/sync-close.ts activities",
-    "sync:close:users": "ts-node src/sync-close.ts users",
-    "sync:close:custom-fields": "ts-node src/sync-close.ts custom-fields",
-    "sync:close:all": "ts-node src/sync-close.ts all",
-    "sync:close": "pnpm run sync:close:all",
-    "sync:stripe:subscriptions": "ts-node src/sync-stripe.ts subscriptions",
-    "sync:stripe:customers": "ts-node src/sync-stripe.ts customers",
-    "sync:stripe:invoices": "ts-node src/sync-stripe.ts invoices",
-    "sync:stripe:all": "ts-node src/sync-stripe.ts all",
-    "sync:stripe": "pnpm run sync:stripe:all",
+    "test": "jest",
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "sync": "ts-node src/sync.ts",
+    "sync:help": "ts-node src/sync.ts",
+    "sync:close": "ts-node src/sync-close.ts",
+    "sync:stripe": "ts-node src/sync-stripe.ts",
+    "config": "ts-node scripts/config.ts",
+    "config:validate": "ts-node scripts/config.ts validate",
+    "config:list": "ts-node scripts/config.ts list",
+    "config:show": "ts-node scripts/config.ts show",
     "query": "ts-node src/query-runner.ts",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
     "docker:logs": "docker compose logs -f",
-    "docker:status": "docker compose ps",
-    "docker:restart": "docker compose down && docker compose up -d && sleep 15",
-    "config:validate": "ts-node scripts/config.ts validate",
-    "config:list": "ts-node scripts/config.ts list",
-    "config:show": "ts-node scripts/config.ts show",
-    "migrate:tenants": "node scripts/migrate-tenants-to-database.js",
-    "setup": "pnpm install && pnpm run docker:up && echo 'Waiting for MongoDB to start...' && sleep 15",
-    "mongo:up": "docker compose up -d mongodb",
-    "mongo:down": "docker compose stop mongodb && docker compose rm -f mongodb || true",
-    "clean": "find . -name node_modules -type d -prune -exec rm -rf {} + && rm -f **/pnpm-lock.yaml"
+    "docker:rebuild": "docker compose down && docker compose build && docker compose up -d",
+    "docker:clean": "docker compose down -v",
+    "mongo:export": "ts-node scripts/export-mongo.ts",
+    "mongo:import": "ts-node scripts/import-mongo.ts",
+    "mongo:backup": "ts-node scripts/backup-mongo.ts",
+    "mongo:restore": "ts-node scripts/restore-mongo.ts",
+    "generate:types": "ts-node scripts/generate-types.ts",
+    "app:dev": "pnpm --filter app run dev",
+    "app:build": "pnpm --filter app run build",
+    "app:preview": "pnpm --filter app run preview",
+    "api:dev": "pnpm --filter api run dev",
+    "api:build": "pnpm --filter api run build",
+    "api:start": "pnpm --filter api run start",
+    "install:all": "pnpm install -r"
   },
+  "keywords": [
+    "analytics",
+    "data-sync",
+    "close-crm",
+    "stripe",
+    "mongodb",
+    "typescript"
+  ],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
+    "bson": "^6.2.0",
+    "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "js-yaml": "^4.1.0",
     "mongodb": "^6.3.0",
-    "stripe": "^18.2.0"
+    "stripe": "^14.25.0"
   },
   "devDependencies": {
-    "@types/js-yaml": "^4.0.8",
-    "@types/node": "^20.10.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "concurrently": "^8.2.2"
-  },
-  "keywords": [
-    "close.com",
-    "stripe",
-    "analytics",
-    "mongodb",
-    "multi-tenant",
-    "crm"
-  ],
-  "author": "",
-  "license": "MIT"
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.55.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
+  }
 }
