--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@mui/x-license": "^8.4.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.2",
+    "immer": "^10.1.1",
     "openai": "^4.103.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
