--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.2",
     "immer": "^10.1.1",
+    "lucide-react": "^0.511.0",
     "openai": "^4.103.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
