--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.8.0",
+    "@openai/agents": "^0.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "hono": "^3.12.0",
