--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
