--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Analytics platform syncing data from multiple sources like Close.com, Stripe, and databases",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"pnpm run docker:up\" \"pnpm --filter app run dev\" \"pnpm --filter api run dev\"",
+    "dev": "concurrently \"pnpm --filter app run dev\" \"pnpm --filter api run dev\"",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
