Update dependencies and enhance authentication flow
- Upgraded bcrypt to version 6.0.0 for improved security.
- Removed deprecated packages and cleaned up pnpm-lock.yaml.
- Refactored auth controller to improve cookie handling and session management.
- Added user menu in Sidebar component for better user experience.
- Integrated AuthWrapper and AuthProvider in the main application structure.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,6 @@
-# pnpm workspace configuration
 packages:
-  - "."
-  - "app"
-  - "api"
+  - .
+  - app
+  - api
+ignoredBuiltDependencies:
+  - bcrypt
