--- a/api/package.json
+++ b/api/package.json
@@ -34,7 +34,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/js-yaml": "^4.0.8",
+    "@types/mssql": "^9.1.7",
     "@types/node": "^20.10.5",
+    "@types/pg": "^8.15.4",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
