Refactor: Update ESLint configuration and improve code consistency
- Enabled formatting on save and switched the default formatter to Prettier for better code style consistency.
- Adjusted ESLint linting rules to provide linting on type and updated the lint script to remove unused directive warnings.
- Refactored various routes and services to use consistent arrow function syntax and improved error handling in several areas.
- Removed unused helper functions and cleaned up imports for better maintainability.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "terminal.integrated.defaultProfile.linux": "zsh",
   "terminal.integrated.defaultProfile.osx": "zsh",
   "terminal.integrated.shellIntegration.enabled": false,
-  
+
   // ESLint configuration
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
@@ -18,31 +18,36 @@
     { "directory": "./app", "changeProcessCWD": true },
     { "directory": "./api", "changeProcessCWD": true }
   ],
-  
+
   // Editor settings for consistent formatting
-  "editor.formatOnSave": false, // Disable default formatter on save to avoid conflicts with ESLint
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+  "editor.formatOnSave": true, // Enable formatting on save
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "[typescript]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
   "[typescriptreact]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
   "[javascript]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
   "[javascriptreact]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true
   },
-  
+
   // Optional: Show ESLint status in the status bar
   "eslint.alwaysShowStatus": true,
-  
+
   // Optional: Auto-fix on paste
   "editor.formatOnPaste": false,
-  
-  // Files to exclude from ESLint
-  "eslint.options": {
-    "ignorePatterns": ["node_modules", "dist", "build", "coverage", "*.config.js"]
-  }
+
+  // Ensure ESLint is actively linting as you type
+  "eslint.provideLinting": true,
+  "eslint.run": "onType",
+  "eslint.format.enable": false,
+  "eslint.packageManager": "pnpm" // use the workspace package manager
 }
