--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "pnpm run lint && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "lint:fix": "eslint . --ext ts,tsx --fix"
   },
   "dependencies": {
