--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "bson": "^6.2.0",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
+    "eslint-plugin-prettier": "^5.4.1",
     "js-yaml": "^4.1.0",
     "mongodb": "^6.3.0",
     "stripe": "^14.25.0"
@@ -72,6 +73,7 @@
     "@typescript-eslint/parser": "^6.13.2",
     "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
+    "eslint-config-prettier": "^10.1.5",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
