--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "openai": "^4.103.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.57.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.29.2",
