--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Analytics platform syncing data from multiple sources like Close.com, Stripe, and databases",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"pnpm --filter app run dev\" \"pnpm --filter api run dev\"",
+    "dev": "concurrently \"pnpm --filter app run dev\" \"pnpm --filter api run dev\" \"pnpm --filter api run worker:dev\"",
     "build": "pnpm run lint && pnpm run app:build && pnpm run api:build && tsc",
     "start": "node dist/index.js",
     "test": "jest",
@@ -45,15 +45,20 @@
   "license": "ISC",
   "dependencies": {
     "@types/inquirer": "^8.2.11",
+    "@types/node-cron": "^3.0.11",
+    "api": "^6.1.3",
     "axios": "^1.6.2",
     "bson": "^6.2.0",
     "commander": "^14.0.0",
+    "cron-parser": "^5.3.0",
     "dotenv": "^16.3.1",
     "eslint-plugin-prettier": "^5.4.1",
     "inquirer": "^8.2.6",
     "js-yaml": "^4.1.0",
     "mongodb": "^6.3.0",
-    "stripe": "^14.25.0"
+    "node-cron": "^4.1.1",
+    "stripe": "^14.25.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
