--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.15.1",
     "mssql": "^11.0.1",
     "mysql2": "^3.14.1",
+    "node-cron": "^3.0.3",
     "openai": "^5.2.0",
     "pg": "^8.16.0",
     "sqlite": "^5.1.1",
@@ -42,6 +43,7 @@
     "@types/js-yaml": "^4.0.9",
     "@types/mssql": "^9.1.7",
     "@types/node": "^24.0.0",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.4",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
