Refactor sync functionality and update dependencies
- Removed the sync directory and related TypeScript scripts from the project to streamline the codebase.
- Updated the Dockerfile to eliminate the global installation of `tsx` and adjusted the sync execution paths for production compatibility.
- Enhanced the `package.json` build script to use `lint:fix:all` for improved code quality checks.
- Added new dependencies `commander` and `inquirer` to facilitate command-line interactions and user prompts.
- Updated `pnpm-lock.yaml` to reflect the latest dependency versions, including `@types/node` and others for better compatibility.
- Improved logging in the `SyncWorker` class to provide clearer insights during sync operations.

--- a/api/package.json
+++ b/api/package.json
@@ -19,10 +19,12 @@
     "arctic": "^3.7.0",
     "axios": "^1.6.2",
     "bcrypt": "^6.0.0",
+    "commander": "^14.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express-rate-limit": "^7.5.0",
     "hono": "^4.7.11",
+    "inquirer": "^8.2.6",
     "js-yaml": "^4.1.0",
     "lucia": "^3.2.2",
     "mongodb": "^6.17.0",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.19",
+    "@types/inquirer": "^8.2.11",
     "@types/js-yaml": "^4.0.9",
     "@types/mssql": "^9.1.7",
     "@types/node": "^24.0.0",
