--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"pnpm --filter app run dev\" \"pnpm --filter api run dev\" \"pnpm --filter api run worker:dev\"",
-    "build": "pnpm run lint && pnpm run app:build && pnpm run api:build && tsc",
+    "build": "pnpm run lint:fix:all && pnpm run app:build && pnpm run api:build && tsc",
     "start": "node dist/index.js",
     "test": "jest",
-    "lint": "eslint sync/**/*.ts",
-    "lint:fix": "eslint sync/**/*.ts --fix",
-    "format": "prettier --write \"sync/**/*.ts\"",
-    "sync": "ts-node sync/sync.ts",
-    "sync:help": "ts-node sync/sync.ts",
+    "format": "prettier --write \"api/**/*.ts\"",
+    "sync": "ts-node api/src/sync/sync.ts",
+    "sync:help": "ts-node api/src/sync/sync.ts --help",
     "query": "ts-node sync/query-runner.ts",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
