Enhance sync functionality with new CLI command and improved logging
- Added a new "sync" command to package.json for executing sync operations via CLI.
- Introduced SyncLogger interface for structured logging during sync processes.
- Refactored performSync function to utilize performSyncJob for better error handling and logging.
- Improved logging throughout the sync process to provide detailed insights into execution status and errors.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node dist/index.js",
     "test": "jest",
     "format": "prettier --write \"api/**/*.ts\"",
-    "sync": "ts-node api/src/sync/sync.ts",
-    "sync:help": "ts-node api/src/sync/sync.ts --help",
+    "sync": "ts-node api/src/sync/cli.ts",
+    "sync:help": "ts-node api/src/sync/cli.ts --help",
     "query": "ts-node sync/query-runner.ts",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
