--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "pnpm run lint && pnpm exec tsc && copyfiles -u 1 'src/**/*.svg' dist",
     "start": "tsx src/index.ts",
+    "sync": "tsx src/sync/cli.ts",
     "worker": "tsx src/worker.ts",
     "worker:dev": "tsx watch src/worker.ts",
     "migrate:workspaces": "tsx src/migrations/migrate-to-workspaces.ts",
