Refactor sync job execution and logging for improved clarity and performance
- Updated the sync job execution logic to enhance logging and error handling.
- Introduced a new logger interface for better structured logging during sync operations.
- Adjusted the job execution flow to ensure proper handling of job statuses and execution IDs.
- Simplified the cron expression parsing and job scheduling logic for better maintainability.
- Removed redundant code and improved overall readability of the sync job functions.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Analytics platform syncing data from multiple sources like Close.com, Stripe, and databases",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"pnpm --filter app run dev\" \"pnpm --filter api run dev\" \"pnpm --filter api run worker:dev\"",
+    "dev": "concurrently \"pnpm --filter app run dev\" \"pnpm --filter api run dev\"",
     "build": "pnpm run lint:fix:all && pnpm run app:build && pnpm run api:build && tsc",
     "start": "node dist/index.js",
     "test": "jest",
