Add Inngest dependency and update debug version references
- Added Inngest as a dependency in package.json for enhanced background job management.
- Updated debug version references in pnpm-lock.yaml to include supports-color for improved compatibility across various packages.

--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.5.0",
     "express-rate-limit": "^7.5.0",
     "hono": "^4.7.11",
+    "inngest": "^3.39.2",
     "inquirer": "^8.2.6",
     "js-yaml": "^4.1.0",
     "lucia": "^3.2.2",
