--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.29.2",
     "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
