Add LogTape logging integration for sync job execution and configuration
- Introduced LogTape for enhanced logging in sync job functions, improving traceability and debugging.
- Updated logging statements across sync job execution to include contextual information such as job ID and execution details.
- Configured LogTape logger in Inngest client initialization for consistent logging behavior.
- Added new logging for scheduled job runner and cleanup functions to track job execution and maintenance activities.

--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
+    "@logtape/logtape": "^1.0.4",
     "@openai/agents": "^0.0.5",
     "arctic": "^3.7.0",
     "axios": "^1.6.2",
