Add API key management functionality and integrate date-fns library
- Introduced API key management routes for creating, listing, and deleting API keys within workspaces.
- Enhanced workspace schema to include API key details, improving authentication capabilities.
- Integrated date-fns library for date handling, ensuring consistent date formatting across the application.
- Updated console routes to utilize unified authentication middleware for better access control.
- Refactored console execution logic to improve error handling and response structure.

--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "@mui/x-license": "^8.4.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.2",
+    "date-fns": "^4.1.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.511.0",
     "openai": "^4.103.0",
