--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "lint:fix": "eslint . --ext ts --fix"
   },
   "dependencies": {
+    "@google-cloud/bigquery": "^8.1.1",
     "@hono/node-server": "^1.14.4",
     "@logtape/logtape": "^1.0.4",
     "@openai/agents": "^0.0.5",
