Add website package and setup for marketing site
- Introduced a new `website` package using Next.js and Tailwind CSS for the public-facing marketing site.
- Added scripts for development, building, and linting the website in the root `package.json`.
- Updated `pnpm-workspace.yaml` to include the new `website` package.
- Created comprehensive documentation for local development, deployment to Vercel, and customization in `WEBSITE_SETUP.md` and `website/README.md`.
- Configured Tailwind CSS and PostCSS for styling, and set up TypeScript for type safety.
- Implemented a responsive landing page with sections for features, integrations, and a call to action.
- Added deployment configuration for Vercel in `vercel.json` and included necessary files for Next.js setup.
- Included a `.gitignore` for the website package to manage ignored files effectively.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "app:preview": "pnpm --filter app run preview",
     "app:lint": "pnpm --filter app run lint",
     "app:lint:fix": "pnpm --filter app run lint:fix",
+    "website:dev": "pnpm --filter website run dev",
+    "website:build": "pnpm --filter website run build",
+    "website:lint": "pnpm --filter website run lint",
     "api:dev": "pnpm --filter api run dev",
     "api:build": "pnpm --filter api run build",
     "api:start": "pnpm --filter api run start",
