Add documentation package and CI workflow for GitHub Pages deployment
- Introduced a new `docs` package for comprehensive project documentation using Astro and Starlight.
- Added scripts for development and building documentation in the `docs/package.json`.
- Created a GitHub Actions workflow to automate deployment of documentation to GitHub Pages on push to the main branch.
- Configured `.gitignore` for the `docs` directory to manage build outputs and environment files.
- Established a content structure with multiple guides, references, and an introduction to enhance user onboarding and understanding of the platform.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "api:start": "pnpm --filter api run start",
     "api:lint": "pnpm --filter api run lint",
     "api:lint:fix": "pnpm --filter api run lint:fix",
+    "docs:dev": "pnpm --filter docs run dev",
+    "docs:build": "pnpm --filter docs run build",
     "lint:all": "pnpm run app:lint && pnpm run api:lint && node scripts/check-connector-agnosticism.js",
     "lint:fix:all": "pnpm run app:lint:fix && pnpm run api:lint:fix && node scripts/check-connector-agnosticism.js",
     "install:all": "pnpm install -r"
